@@ -15,7 +15,7 @@ IF ERRORLEVEL 2 goto noJavaw
 javaw > nul
 IF ERRORLEVEL 2 goto noJavaw
 
-java --add-opens=java.base/java.nio=ALL-UNNAMED -cp "lib/*;../classes" %*
+java --enable-native-access=ALL-UNNAMED -cp "lib/*;../classes" %*
 goto end
 
 :noJavaw
